resetting java solutions